testdata/valid/lookup_16.lisp
(defcolumns (X :i16) (Y :i16))
(deflookup test ((shift Y -1)) (X))
